--- a/index.html
+++ b/index.html
@@ -10,187 +10,216 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+      integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Home work 2</title>
   </head>
   <body>
     <header class="top">
-      <a href="./index.html" class="top-link link"
-        ><span class="top-web webstudio">Web</span
-        ><span class="top-studio webstudio">Studio</span></a
-      >
-      <nav class="top-nav">
-        <ul class="top-nav-list list">
-          <li class="top-nav-item">
-            <a
-              href="./index.html"
-              class="top-nav-link link top-nav-link:hover, top-nav-link:focus current"
-              >Студия</a
-            >
-          </li>
-          <li class="top-nav-item">
-            <a
-              href="./portfolio.html"
-              class="top-nav-link link top-nav-link:hover, top-nav-link:focus"
-              >Портфолио</a
-            >
-          </li>
-          <li class="top-nav-item">
-            <a
-              href="./index.html"
-              class="top-nav-link link top-nav-link:hover, top-nav-link:focus"
-              >Контакты</a
-            >
-          </li>
-        </ul>
-      </nav>
-      <ul class="top-list list">
-        <li class="top-item">
-          <a
-            href="mailto:info@devstudio.com"
-            class="top-list-link link top-list-link:hover, top-list-link:focus current"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="top-item">
-          <a
-            href="tel:+380961111111"
-            class="top-list-link link top-list-link:hover, top-list-link:focus link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
-    </header>
-    <main class="center">
-      <section class="center-hero">
-        <h1 class="center-hero-title">
-          Эффективные решения <br />для вашего бизнеса
-        </h1>
-        <button
-          class="center-hero-button center-hero-button:hover, center-hero-button:focus"
-          type="button"
+      <div class="container one">
+        <a href="./index.html" class="top-link link"
+          ><span class="top-web webstudio">Web</span
+          ><span class="top-studio webstudio">Studio</span></a
         >
-          Заказать услугу
-        </button>
-      </section>
-      <section class="center-skills">
-        <h2 class="visually-hidden">Почему стоит выбрать нас</h2>
-        <ul class="center-skills-list list">
-          <li class="center-skills-item">
-            <h3 class="center-skills-title">Внимание к деталям</h3>
-            <p class="center-skills-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="center-skills-item">
-            <h3 class="center-skills-title">Пунктуальность</h3>
-            <p class="center-skills-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="center-skills-item">
-            <h3 class="center-skills-title">Планирование</h3>
-            <p class="center-skills-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="center-skills-item">
-            <h3 class="center-skills-title">Современные технологии</h3>
-            <p class="center-skills-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="center-about">
-        <h2 class="center-about-title">Чем мы занимаемся</h2>
-        <ul class="center-about-list list">
-          <li class="center-about-item">
-            <img src="./img/box1.jpg" width="370" alt="box1" />
-          </li>
-          <li class="center-about-item">
-            <img src="./img/box2.jpg" width="370" alt="box2" />
-          </li>
-          <li class="center-about-item">
-            <img src="./img/box3.jpg" width="370" alt="box3" />
-          </li>
-        </ul>
-      </section>
-      <section class="center-workers">
-        <h2 class="center-workers-title">Наша команда</h2>
-        <ul class="center-workers-list list">
-          <li class="center-workers-item">
-            <img
-              src="./img/worker1.jpg"
-              width="270"
-              alt="фото Игорь Демьяненко"
-            />
-            <h3 class="center-workers-name">Игорь Демьяненко</h3>
-            <p class="center-workers-profession">Product Designer</p>
-          </li>
-          <li class="center-workers-item">
-            <img src="./img/worker2.jpg" width="270" alt="фото Ольга Репина" />
-            <h3 class="center-workers-name">Ольга Репина</h3>
-            <p class="center-workers-profession">Frontend Developer</p>
-          </li>
-          <li class="center-workers-item">
-            <img
-              src="./img/worker3.jpg"
-              width="270"
-              alt="фото Николай Тарасов"
-            />
-            <h3 class="center-workers-name">Николай Тарасов</h3>
-            <p class="center-workers-profession">Marketing</p>
-          </li>
-          <li class="center-workers-item">
-            <img
-              src="./img/worker4.jpg"
-              width="270"
-              alt="фото Михаил Ермаков"
-            />
-            <h3 class="center-workers-name">Михаил Ермаков</h3>
-            <p class="center-workers-profession">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="bottom">
-      <a class="bottom-link link" href="./index.html">
-        <span class="bottom-web webstudio">Web</span
-        ><span class="bottom-studio webstudio">Studio</span>
-      </a>
-      <address class="bottom-address">
-        <ul class="bottom-list list">
-          <li class="bottom-item">
-            <a
-              class="bottom-address-link link bottom-address-link:hover, bottom-address-link:focus"
-              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              г. Киев, пр-т Леси Украинки, 26
-            </a>
-          </li>
-          <li class="bottom-item link">
+        <nav class="top-nav">
+          <ul class="top-nav-list list">
+            <li class="top-nav-item">
+              <a
+                href="./index.html"
+                class="top-nav-link link top-nav-link:hover, top-nav-link:focus current"
+                >Студия</a
+              >
+            </li>
+            <li class="top-nav-item">
+              <a
+                href="./portfolio.html"
+                class="top-nav-link link top-nav-link:hover, top-nav-link:focus"
+                >Портфолио</a
+              >
+            </li>
+            <li class="top-nav-item">
+              <a
+                href="./index.html"
+                class="top-nav-link link top-nav-link:hover, top-nav-link:focus"
+                >Контакты</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <ul class="top-list">
+          <li class="top-item">
             <a
               href="mailto:info@devstudio.com"
-              class="bottom-list-link link bottom-list-link:hover, bottom-list-link:focus"
-              >info@example.com</a
+              class="top-list-link link top-list-link:hover, top-list-link:focus current"
+              >info@devstudio.com</a
             >
           </li>
-          <li class="bottom-item link">
+          <li class="top-item">
             <a
               href="tel:+380961111111"
-              class="bottom-list-link link bottom-list-link:hover, bottom-list-link:focus"
+              class="top-list-link link top-list-link:hover, top-list-link:focus link"
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+    <main class="center">
+      <section class="center-hero">
+        <div class="container section-hero">
+          <div class="hero-title">
+            <h1 class="center-hero-title hero-title">
+              Эффективные решения для вашего бизнеса
+            </h1>
+          </div>
+          <div class="btn-hero">
+            <button
+              class="center-hero-button center-hero-button:hover, center-hero-button:focus"
+              type="button"
+            >
+              Заказать услугу
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="center-skills">
+        <div class="container section">
+          <h2 class="visually-hidden">Почему стоит выбрать нас</h2>
+          <ul class="center-skills-list list">
+            <li class="center-skills-item">
+              <h3 class="center-skills-title">Внимание к деталям</h3>
+              <p class="center-skills-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="center-skills-item">
+              <h3 class="center-skills-title">Пунктуальность</h3>
+              <p class="center-skills-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="center-skills-item">
+              <h3 class="center-skills-title">Планирование</h3>
+              <p class="center-skills-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="center-skills-item">
+              <h3 class="center-skills-title">Современные технологии</h3>
+              <p class="center-skills-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="center-about">
+        <div class="container section">
+          <h2 class="center-about-title">Чем мы занимаемся</h2>
+          <ul class="center-about-list list">
+            <li class="center-about-item">
+              <img src="./img/box1.jpg" width="370" height="294px" alt="box1" />
+            </li>
+            <li class="center-about-item">
+              <img src="./img/box2.jpg" width="370" height="294px" alt="box2" />
+            </li>
+            <li class="center-about-item">
+              <img src="./img/box3.jpg" width="370" height="294px" alt="box3" />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="center-workers">
+        <div class="container section">
+          <h2 class="center-workers-title">Наша команда</h2>
+          <ul class="center-workers-list list">
+            <li class="center-workers-item">
+              <img
+                src="./img/worker1.jpg"
+                width="270"
+                alt="фото Игорь Демьяненко"
+              />
+              <h3 class="center-workers-name">Игорь Демьяненко</h3>
+              <p class="center-workers-profession">Product Designer</p>
+            </li>
+            <li class="center-workers-item">
+              <img
+                src="./img/worker2.jpg"
+                width="270"
+                alt="фото Ольга Репина"
+              />
+              <h3 class="center-workers-name">Ольга Репина</h3>
+              <p class="center-workers-profession">Frontend Developer</p>
+            </li>
+            <li class="center-workers-item">
+              <img
+                src="./img/worker3.jpg"
+                width="270"
+                alt="фото Николай Тарасов"
+              />
+              <h3 class="center-workers-name">Николай Тарасов</h3>
+              <p class="center-workers-profession">Marketing</p>
+            </li>
+            <li class="center-workers-item">
+              <img
+                src="./img/worker4.jpg"
+                width="270"
+                alt="фото Михаил Ермаков"
+              />
+              <h3 class="center-workers-name">Михаил Ермаков</h3>
+              <p class="center-workers-profession">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="bottom">
+      <div class="container ft">
+        <div class="webstudio">
+          <a class="bottom-link link" href="./index.html">
+            <span class="bottom-web webstudio">Web</span
+            ><span class="bottom-studio webstudio">Studio</span>
+          </a>
+        </div>
+        <address class="bottom-address">
+          <ul class="bottom-list list">
+            <li class="bottom-item">
+              <a
+                class="bottom-address-link link bottom-address-link:hover, bottom-address-link:focus"
+                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                г. Киев, пр-т Леси Украинки, 26
+              </a>
+            </li>
+            <li class="bottom-item link">
+              <a
+                href="mailto:info@devstudio.com"
+                class="bottom-list-link link bottom-list-link:hover, bottom-list-link:focus"
+                >info@example.com</a
+              >
+            </li>
+            <li class="bottom-item link">
+              <a
+                href="tel:+380961111111"
+                class="bottom-list-link link bottom-list-link:hover, bottom-list-link:focus"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
