--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
           <h2 class="center-about-title">Чем мы занимаемся</h2>
           <ul class="center-about-list list">
             <li class="center-about-item">
-              <img src="./img/box1.jpg" width="370" height="294px" alt="box1" />
+              <img src="./img/box1.jpg" width="370" height="294" alt="box1" />
             </li>
             <li class="center-about-item">
-              <img src="./img/box2.jpg" width="370" height="294px" alt="box2" />
+              <img src="./img/box2.jpg" width="370" height="294" alt="box2" />
             </li>
             <li class="center-about-item">
-              <img src="./img/box3.jpg" width="370" height="294px" alt="box3" />
+              <img src="./img/box3.jpg" width="370" height="294" alt="box3" />
             </li>
           </ul>
         </div>
